# artificial-vision

./: LICENSE  README.md
Taller1/itkcpp/: 03_image_process_itk.cxx  CMakeLists.txt
Taller1/opencv/: taller01.py
ejercicioCamara/: CMakeLists.txt  ocvCamara.py  transformacionAfinITK.cxx
ejercicioFiltrado1/: ejercicio1.py  ejercicio2.py  respuestaEjercicio2.txt.txt  respuestasEjercicio1.txt.txt
ejercicioHistograma/: a.jpg:Zone.Identifier  ejercicio.py
ejercicioIntensidades/: 03_rescale_intensity_ocv.py
proyecto/: proyecto.py
taller02/: 03_rescale_intensity_ocv.cxx  CMakeLists.txt
taller03/: README.md  functions.py  main.py  script.py  taller.py
taller04/: coordenadasITK.cxx
taller04 Rios Fonseca/: taller04.py
taller05/: script.py  script2.py  script3.py
taller07/: taller02.py
taller2/: b.jpg:Zone.Identifier  taller02.py
